--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,17 @@
   "type": "module",
   "scripts": {
     "build": "echo \"No build step required\"",
-    "start": "node server.js --ignore client",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js --ignore client",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seeds/index.js"
+    "seed": "node src/seeds/index.js"
   },
   "nodemonConfig": {
     "watch": [
       "src"
     ],
     "ext": "js,json",
-    "exec": "node server.js"
+    "exec": "node src/server.js"
   },
   "keywords": [],
   "author": "",
