--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^146.0.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
   }
