--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.6",
     "@tailwindcss/vite": "^4.0.9",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
