--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,10 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
+    "@apollo/server": "^4.12.0",
+    "@graphql-tools/schema": "^10.0.23",
+    "graphql": "^16.11.0",
+    "mongoose": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
