--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.10.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
