--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "agora-access-token": "^2.0.4",
+    "agora-rtc-sdk-ng": "^4.23.3",
+    "agora-token": "^2.0.4",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.503.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react-youtube": "^10.1.0"
