--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   },
   "dependencies": {
     "agora-access-token": "^2.0.4",
-    "agora-chat": "^1.3.1",
     "agora-rtc-sdk-ng": "^4.23.3",
-    "agora-token": "^2.0.4",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
@@ -39,6 +37,7 @@
     "lucide-react": "^0.503.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pubnub": "^7.6.2",
     "react-youtube": "^10.1.0"
   }
 }
