--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.12.0",
+    "pubnub": "^7.6.3",
     "sequelize": "^6.37.3"
   }
 }
