--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.344.0",
     "pubnub": "^7.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
