--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.13.8",
     "@tailwindcss/vite": "^4.0.9",
     "agora-rtc-sdk-ng": "^4.23.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
