--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.10.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.0.9",
     "webfontloader": "^1.6.28"
   },
