--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@graphql-tools/schema": "^10.0.23",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
