--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.10.0",
     "react-youtube": "^10.1.0",
