--- a/package.json
+++ b/package.json
@@ -4,28 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm i && npm run build && npm run seed && npm run start:dev",
-    "start": "npm run client:build && npm run server",
-    "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
-    "server": "cd server && npm start",
-    "server:dev": "cd server && npm run dev",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "client:build": "cd client && npm run build",
-    "client:dev": "cd client && npm run dev",
-    "build": "cd client && npm run build && cd ../server && npm run build",
+    "install": "cd server && npm install && cd ../client && npm install",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
+    "build": "npm run build:client && npm run build:server",
     "seed": "cd server && npm run seed",
-    "render-build": "npm install && npm run build"
+    "server": "cd server && npm start",
+    "client": "cd client && npm start",
+    "server:dev": "cd server && npm run dev",
+    "client:dev": "cd client && npm run dev",
+    "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
+    "start": "npm run build && concurrently \"npm run server\" \"wait-on tcp:3001 && npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/date-fns": "^2.5.3",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.3",
-    "wait-on": "^7.2.0"
-  },
   "dependencies": {
     "agora-access-token": "^2.0.4",
     "agora-rtc-sdk-ng": "^4.23.3",
@@ -40,5 +33,11 @@
     "pubnub": "^7.6.2",
     "react-loading-skeleton": "^3.5.0",
     "react-youtube": "^10.1.0"
+  },
+  "devDependencies": {
+    "@types-date-fns": "^2.5.3",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.3",
+    "wait-on": "^7.2.0"
   }
 }
