--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,6 @@
     "ext": "js,json",
     "exec": "node src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@graphql-tools/schema": "^10.0.23",
@@ -44,7 +41,6 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.12.0",
-    "pubnub": "^7.6.3",
-    "sequelize": "^6.37.3"
+    "pubnub": "^7.6.3"
   }
 }
