--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,9 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
-    "react-loading-skeleton": "^3.5.0",
-    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.10.0",
     "react-youtube": "^10.1.0",
-    "tailwindcss": "^4.0.9",
-    "webfontloader": "^1.6.28"
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -39,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^6.0.5"
   }
 }
